# PNASSound

./: .gitignore  CMakeLists.txt  Makefile  PNASSound.dmg  README.md  main.cpp  pnas_sound_static  pnas_sound_static_arm64  pnas_sound_static_x86_64
PNASSound.app/Contents/MacOS/: PNASSound
PNASSound.app/Contents/Resources/: AppIcon.icns
tools/: make_icon.py
